-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.3.0, Lustre 2.4.0, Lustre 2.1.2
-
Lustre 2.1.2
-
3
-
4004
On a 2.1 filesystem - server and client both running 2.1.2, and a filesystem created with Lustre 2.1.x, many files are created on the same client using the same FID sequence number. That's how I expect it to work.
With servers and clients running 2.1.2, but with a filesystem that was originally created with Lustre 1.8, only one file is created per sequence number before the client requests another one from the MDS. For example, for several consecutive files created on the same client, I get FIDs like this:
[0x33c0e251df8:0x1:0x0]
[0x33c0e254b37:0x1:0x0]
[0x33c0e257876:0x1:0x0]
[0x33c0e25a5b5:0x1:0x0]
[0x33c0e25d2f4:0x1:0x0]
[0x33c0e260033:0x1:0x0]
lctl get_param 'seq.cli-srv-nbp*.* shows a space of [0x0 - 0x0]:0:0 for the filesystems that were formatted under Lustre 1.8.
Is this the way it's supposed to work?
Thanks,
Jason
- is related to
-
LU-3318 mdc_set_lock_data() ASSERTION( old_inode->i_state & I_FREEING )
-
- Resolved
-